Create static components, add hard coded data, install react-bootstrap in the project.

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.jam {
+  background-color: rgb(2, 54, 0);
+}
